@@ -174,6 +174,36 @@
 
   </refsect1>
 
+<!-- ****************************** -->
+<!-- BEGIN OF GTKSOURCEVIEW VITUALS -->
+<!-- ****************************** -->
+
+<refsect1>
+    <title>Virtual Methods</title>
+
+    <blockquote role="properties">
+      <informaltable pgwide="1" frame="none">
+      <tgroup cols="2">
+        <colspec column="1" colwidth="1in"/>
+        <colspec column="2" colwidth="4in"/>
+          <tbody>
+      
+            <row valign="top">
+              <entry><methodname>do_redo</methodname></entry>
+              <entry>Method that can be overridden to implement a custom redo.</entry>
+            </row>
+            
+            <row valign="top">
+              <entry><methodname>do_undo</methodname></entry>
+              <entry>Method that can be overridden to implement a custom undo.</entry>
+            </row>
+
+          </tbody>
+        </tgroup>
+      </informaltable>
+    </blockquote>
+</refsect1>
+
 <!-- ********************************* -->
 <!-- BEGIN OF GTKSOURCEVIEW PROPERTIES -->
 <!-- ********************************* -->
